# curso-de-c

./: CMakeLists.txt  README.md
cabeceras/: JuegoDeLaVida.h  Plantilla_gol.h  SegundaClase.h
clases/: Ejecutable.c  Ejecutable.h  JuegoDeLaVida.c  JuegoDeLaVidaV2.c  Main.c  Plantilla_gol.c  Plantilla_gol.h  PrimeraClase.c  PrimeraClase.h  SegundaClase.c
